--- a/team.html
+++ b/team.html
@@ -54,15 +54,19 @@
             <div class="core-team-gallery">
                 <div class="core-member">
                     <img src="teamPhotographs/FacultyAdvisor.jpeg" alt="Faculty Advisor">
+                    <div class="details">
                     <p>Prof. T Vinay Kumar</p>
                     <p>Faculty Advisor</p>
                     <a href="mailto:vinaykumar@nitw.ac.in" class="gmail-icon"> &#9993 MAIL</a>
                 </div>
+                </div>
                 <div class="core-member">
                     <img src="teamPhotographs/treasurer.jpeg" alt="Treasurer">
+                    <div class="details">
                     <p>Prof. Altaf Q H Badar</p>
                     <p>Treasurer</p>
                     <a href="mailto:altafbadar@nitw.ac.in" class="gmail-icon">&#9993 MAIL</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -73,15 +77,19 @@
             <div class="core-team-gallery">
                 <div class="core-member">
                     <img src="teamPhotographs/gen sec.png" alt="General Secretary">
+                    <div class="details">
                     <p>Rakesh Sinha</p>
                     <p>General Secretary</p>
                     <a href="mailto:jr21eeb0a28@student.nitw.ac.in" class="gmail-icon">&#9993; MAIL</a>
+                    </div>
                 </div>
                 <div class="core-member">
                     <img src="teamPhotographs/Secretary.jpg" alt="Secretary">
+                    <div class="details">
                     <p>Abhinay Challa</p>
                     <p>Secretary</p>
                     <a href="mailto:ca21eeb0a18@student.nitw.ac.in" class="gmail-icon">&#9993; MAIL</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -372,3 +380,6 @@ function close(){
 }
  
     </script>
+
+    </body>
+    </html>
