--- a/placements.html
+++ b/placements.html
@@ -20,7 +20,7 @@
     <div class="openMenu"><i class="fa fa-bars"></i></div>  
     <ul class="mainMenu">
         <li><a href="About.html">About</a></li>
-        <li><a href="team.html">Teams</a></li>
+        <li><a href="team.html">Team</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="databank.html">Databank</a></li>
         <li><a href="placements.html">Placements</a></li>
