--- a/team.html
+++ b/team.html
@@ -300,6 +300,10 @@
                     <img src="teamPhotographs/Gajulapalle Harshita Reddy Hosting.jpg" alt="Hosting Team Member 8">
                     <p>Harshita Reddy</p>
                 </div>
+                <div class="team-member">
+                    <img src="teamPhotographs/Gajulapalle Preeti Thakur Hosting.jpg" alt="Hosting Team Member 8">
+                    <p>Preeti Thakur</p>
+                </div>
             </div>
         </section>
 
