--- a/team.html
+++ b/team.html
@@ -301,7 +301,7 @@
                     <p>Harshita Reddy</p>
                 </div>
                 <div class="team-member">
-                    <img src="teamPhotographs/Gajulapalle Preeti Thakur Hosting.jpg" alt="Hosting Team Member 8">
+                    <img src="teamPhotographs/Preeti Thakur Hosting.jpg" alt="Hosting Team Member 8">
                     <p>Preeti Thakur</p>
                 </div>
             </div>
