Updated the Placement Page

--- a/placements.html
+++ b/placements.html
@@ -45,7 +45,7 @@
 <div class="preloader" id="preloader">
     <div class="preloader-content">
         <!-- Bulb Image with Glowing Animation -->
-        <img src="1000038845-removebg-preview (1).png" alt="Electrical Engineering" class="preloader-img">
+        <img src="/internPlace_photos/1000038845-removebg-preview (1).png" alt="Electrical Engineering" class="preloader-img">
         <div class="progress-bar-container">
             <div class="progress-bar"></div>
         </div>
