Modified upcoming events

--- a/index.html
+++ b/index.html
@@ -147,40 +147,39 @@
         <div> 
             <button class="feature" > 
             <div class="icon"> 
-            <img src="/indexPage_photos/IEEE.jpg" width="55" height="50" ;>
+            <img src="/indexPage_photos/Village_Visit_image.jpg" width="55" height="50" ;>
             </div>
             <h2 style="color:white "> 
-                IEEE Seminar
+                Village Visit X EES
             </h2>
             <p style="color:#9ba3b4; font-size:20px"> 
-                This seminar will feature industry leaders discussing the future of electrical engineering.
+                This Visit will try to solve the village problems electrically.
             </p>
             <p style="color:#9ba3b4; font-size:20px"> 
-            Date: 27-12-2024 
+            Date: 24-01-2025 
             </p>
             <p style="color:#9ba3b4; font-size:20px"> 
-            Venue: Yet to be decided  
+            Village: Madikonda
             </p>
             </button> 
         </div> 
         <div> 
             <button class="feature" > 
             <div class="icon"> 
-            <img src="/indexPage_photos/design_competition_image.jpg" width="50" height="50" ;>
+            <img src="/indexPage_photos/Monopoly_image.jpg" width="50" height="50" ;>
             </div>
             <h2 style="color:white "> 
-                Student Design Competition
-                <br>
-                Round-2
+                Electric Monopoly
+                <br> 
             </h2>
             <p style="color:#9ba3b4; font-size:15px;font-size:20px "> 
-                This Competiton aims at solving at real life problems electrically 
+                This event aims at Unleashing the Power of Electricity.
             </p>
             <p style="color:#9ba3b4; font-size:15px;font-size:20px "> 
-                Date: 28-12-2024
+                Date: 25-01-2025
             </p>
             <p style="color:#9ba3b4; font-size:15px;font-size:20px "> 
-                Venue: EEE Seminar Hall
+                Venue: Yet to be decided
             </p>
             </button> 
         </div> 
