--- a/intern.html
+++ b/intern.html
@@ -15,18 +15,26 @@
 <main>
     <section class="company-grid">
         <!-- Company 1 to Company 20 -->
-        <div class="company-card" onclick="showInfo('info1')">
-            <img src="internPlace_photos/amazon.png" alt="Company 1" class="company-logo">
+        <div class="company-card" >
+            <a href="internPlace_photos/Sai Rishik.pdf" target="_blank">
+                <img src="internPlace_photos/amazon.png" alt="Company 1" class="company-logo"> 
+             </a>
         </div>
-        <div class="company-card" onclick="showInfo('info2')">
-            <img src="internPlace_photos/accenture.png" alt="Company 2" class="company-logo">
+        <div class="company-card">
+            <a href="internPlace_photos/Pulipati Goutham Datta Rama Krishna.pdf" target="_blank">
+                <img src="internPlace_photos/Qualcomm.png" alt="Company 1" class="company-logo"> 
+             </a>
         </div>
-        <div class="company-card" onclick="showInfo('info3')">
-            <img src="internPlace_photos/Deloitte.PNG" alt="Company 3" class="company-logo">
+        <div class="company-card">
+            <a href="internPlace_photos/Nashwan.pdf" target="_blank">
+                <img src="internPlace_photos/linkedin.jpg" alt="Company 1" class="company-logo"> 
+             </a>
         </div>
-        <div class="company-card" onclick="showInfo('info4')">
-            <img src="internPlace_photos/deutsche.png" alt="Company 4" class="company-logo">
-        </div>
+        <div class="company-card" >
+            <a href="internPlace_photos/Devi Sri.pdf" target="_blank">
+                <img src="internPlace_photos/optum.png" alt="Company 1" class="company-logo"> 
+             </a>
+                    </div>
         <div class="company-card" onclick="showInfo('info5')">
             <img src="internPlace_photos/aveva.png" alt="Company 5" class="company-logo">
         </div>
