Added feature to main page

--- a/databank.html
+++ b/databank.html
@@ -11,7 +11,7 @@
 <nav>
     <div class="logo-container">
         <img src="indexPage_photos/EES_symbol.png" alt="Left Logo">
-        <div class="logo"><h1>Electrical Engineering Society</h1></div>
+        <div class="logo"><a href="index.html" style="text-decoration:none"> <h1>Electrical Engineering Society</h1></a> </div>
         <img src="indexPage_photos/Thunder-image.png" alt="Right Logo">
     </div>
     <div class="openMenu"><i class="fa fa-bars"></i></div>  
