Added Gate mock test waiting for link

--- a/index.html
+++ b/index.html
@@ -144,10 +144,35 @@
     <br> 
 
     <div class="all_features"> 
+        <div > 
+            <a href="https://www.google.com/" target="_blank">
+                    <button class="feature"  > 
+                    <div class="icon"> 
+                    <img src="/indexPage_photos/Gate.jpg" width="75" height="75" ;>
+                    </div>
+                    <h2 style="color:white "> 
+                        Gate Mock Test
+                        <br> 
+                    </h2>
+                    <p style="color:#9ba3b4; font-size:15px;font-size:20px "> 
+                        This Mock Test Helps the students preparing for Gate Exam.
+                    </p>
+                    <p style="color:#9ba3b4; font-size:15px;font-size:20px "> 
+                        Date : 27-01-2025    
+                    </p>
+                    <p style="color:#9ba3b4; font-size:15px;font-size:20px "> 
+                        Time : 6PM-8PM  
+                    </p>
+                    <p style="color:#9ba3b4; font-size:15px;font-size:20px "> 
+                        Venue: Computer Lab EEE Dept
+                    </p>
+                    </button> 
+            </a> 
+        </div> 
         <div> 
             <button class="feature" > 
             <div class="icon"> 
-            <img src="/indexPage_photos/Village_Visit_image.jpg" width="55" height="50" ;>
+            <img src="/indexPage_photos/Village_Visit_image.jpg" width="75" height="75" ;>
             </div>
             <h2 style="color:white "> 
                 Village Visit X EES
@@ -163,26 +188,7 @@
             </p>
             </button> 
         </div> 
-        <div> 
-            <button class="feature" > 
-            <div class="icon"> 
-            <img src="/indexPage_photos/Monopoly_image.jpg" width="50" height="50" ;>
-            </div>
-            <h2 style="color:white "> 
-                Electric Monopoly
-                <br> 
-            </h2>
-            <p style="color:#9ba3b4; font-size:15px;font-size:20px "> 
-                This event aims at Unleashing the Power of Electricity.
-            </p>
-            <p style="color:#9ba3b4; font-size:15px;font-size:20px "> 
-                Date: 25-01-2025
-            </p>
-            <p style="color:#9ba3b4; font-size:15px;font-size:20px "> 
-                Venue: Yet to be decided
-            </p>
-            </button> 
-        </div> 
+        
     </div> 
     <br> 
     <br> 
