Added Gate Mock Link

--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
 
     <div class="all_features"> 
         <div > 
-            <a href="https://www.google.com/" target="_blank">
+            <a 
+ href="https://docs.google.com/forms/d/e/1FAIpQLScAbDYppYdjcHUbbkr7OEn1OqCV9kcgIB0Cp92fKJ_0Ul8mHA/viewform" target="_blank">
                     <button class="feature"  > 
                     <div class="icon"> 
                     <img src="/indexPage_photos/Gate.jpg" width="75" height="75" ;>
