Update ElectroQuad event details

--- a/index.html
+++ b/index.html
@@ -143,54 +143,40 @@
     <br> 
     <br> 
 
+        </div>
     <div class="all_features"> 
-        <div > 
-            <a 
- href="https://docs.google.com/forms/d/e/1FAIpQLScAbDYppYdjcHUbbkr7OEn1OqCV9kcgIB0Cp92fKJ_0Ul8mHA/viewform" target="_blank">
-                    <button class="feature"  > 
-                    <div class="icon"> 
-                    <img src="/indexPage_photos/Gate.jpg" width="75" height="75" ;>
+        <div> 
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScAbDYppYdjcHUbbkr7OEn1OqCV9kcgIB0Cp92fKJ_0Ul8mHA/viewform" target="_blank">
+                <button class="feature" style="width: 90%; max-width: 500px;"> 
+                    <div class="icon-container" style="display: flex; justify-content: center; gap: 15px; margin-bottom: 10px;"> 
+                        <img src="EES_symbol.png" width="60" height="60">
+                        <img src="indexpagephotos-NITT_EEEAlogo.png" width="60" height="60">
+                        <img src="indexpagephotos-NITK-IETlogo.png" width="60" height="60">
+                        <img src="indexpagephotos-NITC-EEAlogo.png" width="60" height="60">
                     </div>
-                    <h2 style="color:white "> 
-                        Gate Mock Test
-                        <br> 
-                    </h2>
-                    <p style="color:#9ba3b4; font-size:15px;font-size:20px "> 
-                        This Mock Test Helps the students preparing for Gate Exam.
+                    <h2 style="color:white; font-size: 22px; text-align: center;">ElectroQuad</h2>
+                    <p style="color:#9ba3b4; font-size:18px; text-align: center;"> 
+                        Electroquad, a collaboration of four NITs, is hosting an event to boost student development. The event will include a webinar, hackathon, quiz, and case study competition.
                     </p>
-                    <p style="color:#9ba3b4; font-size:15px;font-size:20px "> 
-                        Date : 27-01-2025    
-                    </p>
-                    <p style="color:#9ba3b4; font-size:15px;font-size:20px "> 
-                        Time : 6PM-8PM  
-                    </p>
-                    <p style="color:#9ba3b4; font-size:15px;font-size:20px "> 
-                        Venue: Computer Lab EEE Dept
-                    </p>
-                    </button> 
+                    <p style="color:#9ba3b4; font-size:18px; text-align: center;">Date: 15-02-2025</p>
+                    <p style="color:#9ba3b4; font-size:18px; text-align: center;">Conducting Medium: Online</p>
+                </button> 
             </a> 
         </div> 
         <div> 
-            <button class="feature" > 
-            <div class="icon"> 
-            <img src="/indexPage_photos/Village_Visit_image.jpg" width="75" height="75" ;>
-            </div>
-            <h2 style="color:white "> 
-                Village Visit X EES
-            </h2>
-            <p style="color:#9ba3b4; font-size:20px"> 
-                This Visit will try to solve the village problems electrically.
-            </p>
-            <p style="color:#9ba3b4; font-size:20px"> 
-            Date: 24-01-2025 
-            </p>
-            <p style="color:#9ba3b4; font-size:20px"> 
-            Village: Madikonda
-            </p>
+            <button class="feature" style="width: 90%; max-width: 500px;"> 
+                <div class="icon"> 
+                    <img src="/indexPage_photos/Village_Visit_image.jpg" width="75" height="75";>
+                    </div>
+
+                <h2 style="color:white; font-size: 22px; text-align: center;">Village Visit X EES</h2>
+                <p style="color:#9ba3b4; font-size:18px; text-align: center;">This visit will aim to solve village problems using electrical solutions.</p>
+                <p style="color:#9ba3b4; font-size:18px; text-align: center;">Date: 24-01-2025</p>
+                <p style="color:#9ba3b4; font-size:18px; text-align: center;">Village: Madikonda</p>
             </button> 
         </div> 
-        
-    </div> 
+    </div>
+     
     <br> 
     <br> 
     <br> 
