--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
         </div>
     <div class="all_features"> 
         <div> 
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScAbDYppYdjcHUbbkr7OEn1OqCV9kcgIB0Cp92fKJ_0Ul8mHA/viewform" target="_blank">
-                <button class="feature" style="width: 90%; max-width: 500px;"> 
+            <a href="https://www.instagram.com/nitw_ees/"  target="_blank">
+                <button class="feature"  style="width: 90%; max-width: 500px;"> 
                     <div class="icon-container" style="display: flex; justify-content: center; gap: 15px; margin-bottom: 10px;"> 
                         <img src="indexPage_photos/EES_symbol.png" width="60" height="60">
                         <img src="indexPage_photos/indexpagephotos-NITT_EEEAlogo.png" width="60" height="60">
