Added some placement exp

--- a/placement.html
+++ b/placement.html
@@ -58,8 +58,10 @@
                     <img src="internPlace_photos/Oracle.png" alt="Company 9" class="company-logo">
                  </a>
             </div>
-            <div class="company-card" onclick="showInfo('placementInfo10')">
+            <div class="company-card">
+                <a href="internPlace_photos/Loknath Mahanthi.pdf" target="_blank"> 
                 <img src="internPlace_photos/Quantium.jpg" alt="Company 10" class="company-logo">
+               </a>
             </div>
             <div class="company-card">
                 <a href="internPlace_photos/rapido.pdf" target="_blank">
@@ -92,14 +94,23 @@
                     <img src="internPlace_photos/Increff.png" alt="Company 17" class="company-logo">
                 </a>
             </div>
-            <div class="company-card" onclick="showInfo('placementInfo18')">
-                <img src="internPlace_photos/Mathworks.png" alt="Company 18" class="company-logo">
+            <div class="company-card" > 
+                <a href="internPlace_photos/Samar Jain.pdf" target="_blank"> 
+                 <img src="internPlace_photos/Mathworks.png" alt="Company 18" class="company-logo">
+               </a>
             </div>
             <div class="company-card" onclick="showInfo('placementInfo19')">
                 <img src="internPlace_photos/merilytics.png" alt="Company 19" class="company-logo">
             </div>
-            <div class="company-card" onclick="showInfo('placementInfo20')">
-                <img src="internPlace_photos/Netradyne.jpg" alt="Company 20" class="company-logo">
+            <div class="company-card" >
+                <a href="internPlace_photos/sid_cloudangles.pdf" target="_blank"> 
+                <img src="internPlace_photos/Cloud Angels.png" alt="Company 20" class="company-logo">
+               </a>
+            </div>
+             <div class="company-card" > 
+                <a href="internPlace_photos/Harshvardhan.pdf" target="_blank"> 
+                 <img src="internPlace_photos/Siemens.png" alt="Company 21" class="company-logo">
+               </a>
             </div>
         </section>
     </main>
