Added some more place exp

--- a/intern.html
+++ b/intern.html
@@ -38,8 +38,10 @@
         <div class="company-card" onclick="showInfo('info5')">
             <img src="internPlace_photos/aveva.png" alt="Company 5" class="company-logo">
         </div>
-        <div class="company-card" onclick="showInfo('info6')">
-            <img src="internPlace_photos/google.png" alt="Company 6" class="company-logo">
+        <div class="company-card"> 
+            <a href="internPlace_photos/Samar Jain Intern.pdf" target="_blank"> 
+            <img src="internPlace_photos/ITC.png" alt="Company 6" class="company-logo">
+           </a>
         </div>
         <div class="company-card" onclick="showInfo('info7')">
             <img src="internPlace_photos/MasterCard.png" alt="Company 7" class="company-logo">
