--- a/placement.html
+++ b/placement.html
@@ -68,8 +68,10 @@
                 <img src="internPlace_photos/rapido.png" alt="Company 11" class="company-logo">
             </a>
             </div>
-            <div class="company-card" onclick="showInfo('placementInfo12')">
+            <div class="company-card" >
+                <a href="internPlace_photos/sreeja_SAP.pdf" target="_blank"> 
                 <img src="internPlace_photos/sap.png" alt="Company 12" class="company-logo">
+               </a>
             </div>
             <div class="company-card" >
                 <a href="internPlace_photos/service now.pdf" target="_blank">
@@ -86,8 +88,10 @@
                     <img src="internPlace_photos/Micron.png" alt="Company 15" class="company-logo">
                 </a>
             </div>
-            <div class="company-card" onclick="showInfo('placementInfo16')">
-                <img src="internPlace_photos/Exxon.png" alt="Company 16" class="company-logo">
+            <div class="company-card"> 
+                <a href="internPlace_photos/shivram gracenote.pdf" target="_blank">
+                    <img src="internPlace_photos/Gracenote.png" alt="Company 14" class="company-logo">
+                </a>
             </div>
             <div class="company-card"> 
                 <a href="internPlace_photos/increff.pdf" target="_blank">
@@ -110,6 +114,16 @@
              <div class="company-card" > 
                 <a href="internPlace_photos/Harshvardhan.pdf" target="_blank"> 
                  <img src="internPlace_photos/Siemens.png" alt="Company 21" class="company-logo">
+               </a>
+            </div>
+            <div class="company-card" > 
+                <a href="internPlace_photos/Naga Ritvik.pdf" target="_blank"> 
+                 <img src="internPlace_photos/american Express.png" alt="Company 21" class="company-logo">
+               </a>
+            </div> 
+            <div class="company-card" > 
+                <a href="internPlace_photos/sushanth_sapiens.pdf" target="_blank"> 
+                 <img src="internPlace_photos/sapiens.png" alt="Company 21" class="company-logo">
                </a>
             </div>
         </section>
