Added all internships

--- a/intern.html
+++ b/intern.html
@@ -35,25 +35,35 @@
                 <img src="internPlace_photos/optum.png" alt="Company 1" class="company-logo"> 
              </a>
                     </div>
-        <div class="company-card" onclick="showInfo('info5')">
-            <img src="internPlace_photos/aveva.png" alt="Company 5" class="company-logo">
+       <div class="company-card">
+            <a href="internPlace_photos/Siri Boddula .pdf" target="_blank">
+                <img src="internPlace_photos/aveva.png" alt="Company 1" class="company-logo"> 
+             </a>
         </div>
         <div class="company-card"> 
             <a href="internPlace_photos/Samar Jain Intern.pdf" target="_blank"> 
             <img src="internPlace_photos/ITC.png" alt="Company 6" class="company-logo">
            </a>
         </div>
-        <div class="company-card" onclick="showInfo('info7')">
-            <img src="internPlace_photos/MasterCard.png" alt="Company 7" class="company-logo">
+        <div class="company-card"> 
+            <a href="internPlace_photos/Nandana.pdf" target="_blank"> 
+            <img src="internPlace_photos/Microsoft.png" alt="Company 1" class="company-logo">
+           </a>
         </div>
-        <div class="company-card" onclick="showInfo('info8')">
-            <img src="internPlace_photos/Meesho.png" alt="Company 8" class="company-logo">
+        <div class="company-card"> 
+            <a href="internPlace_photos/Ankul.pdf" target="_blank"> 
+            <img src="internPlace_photos/Texas.png" alt="Company 1" class="company-logo">
+           </a>
         </div>
-        <div class="company-card" onclick="showInfo('info9')">
-            <img src="internPlace_photos/Oracle.png" alt="Company 9" class="company-logo">
+        <div class="company-card"> 
+            <a href="internPlace_photos/Prateek.pdf" target="_blank"> 
+            <img src="internPlace_photos/Oracle.png" alt="Company 1" class="company-logo">
+           </a>
         </div>
-        <div class="company-card" onclick="showInfo('info10')">
-            <img src="internPlace_photos/Quantium.jpg" alt="Company 10" class="company-logo">
+        <div class="company-card"> 
+            <a href="internPlace_photos/Anish.pdf" target="_blank"> 
+            <img src="internPlace_photos/Visa.png" alt="Company 1" class="company-logo">
+           </a>
         </div>
         <div class="company-card" onclick="showInfo('info11')">
             <img src="internPlace_photos/rapido.png" alt="Company 11" class="company-logo">
