Added all placements

--- a/placement.html
+++ b/placement.html
@@ -103,9 +103,6 @@
                  <img src="internPlace_photos/Mathworks.png" alt="Company 18" class="company-logo">
                </a>
             </div>
-            <div class="company-card" onclick="showInfo('placementInfo19')">
-                <img src="internPlace_photos/merilytics.png" alt="Company 19" class="company-logo">
-            </div>
             <div class="company-card" >
                 <a href="internPlace_photos/sid_cloudangles.pdf" target="_blank"> 
                 <img src="internPlace_photos/Cloud Angels.png" alt="Company 20" class="company-logo">
@@ -124,6 +121,16 @@
             <div class="company-card" > 
                 <a href="internPlace_photos/sushanth_sapiens.pdf" target="_blank"> 
                  <img src="internPlace_photos/sapiens.png" alt="Company 21" class="company-logo">
+               </a>
+            </div>
+            <div class="company-card" > 
+                <a href="internPlace_photos/Bhavesh.pdf" target="_blank"> 
+                 <img src="internPlace_photos/Qualcomm2.png" alt="Company 21" class="company-logo">
+               </a>
+            </div>
+            <div class="company-card" > 
+                <a href="internPlace_photos/Vinod.pdf" target="_blank"> 
+                 <img src="internPlace_photos/Samsung.png" alt="Company 21" class="company-logo">
                </a>
             </div>
         </section>
