Added some placement experiences

--- a/intern.html
+++ b/intern.html
@@ -71,9 +71,11 @@
         <div class="company-card" onclick="showInfo('info12')">
             <img src="internPlace_photos/sap.png" alt="Company 12" class="company-logo">
         </div>
-        <div class="company-card" onclick="showInfo('info13')">
-            <img src="internPlace_photos/Service now.png" alt="Company 13" class="company-logo">
-        </div>
+        <div class="company-card">
+            <a href="internPlace_photos/Dhruva Harish.pdf" target="_blank"> 
+                 <img src="internPlace_photos/Service now.png" alt="Company 13" class="company-logo">
+            </a>
+            </div>
         <div class="company-card" onclick="showInfo('info14')">
             <img src="internPlace_photos/Wells_Fargo.png" alt="Company 14" class="company-logo">
         </div>
