--- a/placement.html
+++ b/placement.html
@@ -133,6 +133,31 @@
                  <img src="internPlace_photos/Samsung.png" alt="Company 21" class="company-logo">
                </a>
             </div>
+            <div class="company-card" > 
+                <a href="internPlace_photos/chuseel netradyne.pdf" target="_blank"> 
+                 <img src="internPlace_photos/Netradyne.jpg"  class="company-logo">
+               </a>
+            </div>
+            <div class="company-card" > 
+                <a href="internPlace_photos/vikram_collins.pdf" target="_blank"> 
+                 <img src="internPlace_photos/Collins.png" alt="Company 21" class="company-logo">
+               </a>
+            </div>
+            <div class="company-card" > 
+                <a href="internPlace_photos/raj kumar bel.pdf" target="_blank"> 
+                 <img src="internPlace_photos/bel.png" alt="Company 21" class="company-logo">
+               </a>
+            </div>
+            <div class="company-card" > 
+                <a href="internPlace_photos/Nitin Chinmay.pdf" target="_blank"> 
+                 <img src="internPlace_photos/Exon_Mobil.png" alt="Company 21" class="company-logo">
+               </a>
+            </div>
+            <div class="company-card" > 
+                <a href="internPlace_photos/Sai Sravanthi.pdf" target="_blank"> 
+                 <img src="internPlace_photos/BPCL.png"  alt="Company 21"  class="company-logo">
+               </a>
+            </div>
         </section>
     </main>
 
