Added new placement and intern experiences

--- a/placement.html
+++ b/placement.html
@@ -20,8 +20,10 @@
                     <img src="internPlace_photos/amazon.png" alt="Company 1" class="company-logo">
                 </a>
             </div>
-            <div class="company-card" onclick="showInfo('placementInfo2')">
-                <img src="internPlace_photos/accenture.png" alt="Company 2" class="company-logo">
+            <div class="company-card">
+                <a href="internPlace_photos/vaasista sai accenture.pdf" target="_blank">
+                    <img src="internPlace_photos/accenture.png" alt="Company 1" class="company-logo">
+                </a>
             </div>
             <div class="company-card">
                  <a href="internPlace_photos/Deloitte.pdf" target="_blank">
@@ -156,6 +158,26 @@
             <div class="company-card" > 
                 <a href="internPlace_photos/Sai Sravanthi.pdf" target="_blank"> 
                  <img src="internPlace_photos/BPCL.png"  alt="Company 21"  class="company-logo">
+               </a>
+            </div>
+             <div class="company-card" > 
+                <a href="internPlace_photos/Ajay hcl.pdf" target="_blank"> 
+                 <img src="internPlace_photos/HCL.png"  alt="Company 21"  class="company-logo">
+               </a>
+            </div>
+            <div class="company-card" > 
+                <a href="internPlace_photos/Mahaty Synopsys.pdf" target="_blank"> 
+                 <img src="internPlace_photos/Synopsys.png" alt="Company 21" class="company-logo">
+               </a>
+            </div>
+            <div class="company-card" > 
+                <a href="internPlace_photos/meesho.pdf" target="_blank"> 
+                 <img src="internPlace_photos/Meesho.png" alt="Company 21" class="company-logo">
+               </a>
+            </div>
+             <div class="company-card" > 
+                <a href="internPlace_photos/Asuthosh.pdf" target="_blank"> 
+                 <img src="internPlace_photos/NPCI.png" alt="Company 21" class="company-logo">
                </a>
             </div>
         </section>
