--- a/intern.html
+++ b/intern.html
@@ -76,8 +76,10 @@
                  <img src="internPlace_photos/Service now.png" alt="Company 13" class="company-logo">
             </a>
             </div>
-        <div class="company-card" onclick="showInfo('info14')">
-            <img src="internPlace_photos/Wells_Fargo.png" alt="Company 14" class="company-logo">
+        <div class="company-card" >
+            <a href="internPlace_photos/nischith Mastercard.pdf">  
+            <img src="internPlace_photos/MasterCard.png" alt="Company 14" class="company-logo">
+            </a>
         </div>
         <div class="company-card" onclick="showInfo('info15')">
             <img src="internPlace_photos/Micron.png" alt="Company 15" class="company-logo">
