--- a/intern.html
+++ b/intern.html
@@ -81,8 +81,10 @@
             <img src="internPlace_photos/MasterCard.png" alt="Company 14" class="company-logo">
             </a>
         </div>
-        <div class="company-card" onclick="showInfo('info15')">
-            <img src="internPlace_photos/Micron.png" alt="Company 15" class="company-logo">
+        <div class="company-card" >
+            <a href="internPlace_photos/Keerthi Phonepe.pdf">  
+            <img src="internPlace_photos/Phone Pe.png" alt="Company 14" class="company-logo">
+            </a>
         </div>
         <div class="company-card" onclick="showInfo('info16')">
             <img src="internPlace_photos/Exxon.png" alt="Company 16" class="company-logo">
