--- a/placement.html
+++ b/placement.html
@@ -180,6 +180,11 @@
                  <img src="internPlace_photos/NPCI.png" alt="Company 21" class="company-logo">
                </a>
             </div>
+            <div class="company-card" > 
+                <a href="internPlace_photos/dushyanth genpact.pdf" target="_blank"> 
+                 <img src="internPlace_photos/Genpact.png" alt="Company 21" class="company-logo">
+               </a>
+            </div>
         </section>
     </main>
 
